# Payzee

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  db.py  docker-compose.yaml  main.py  metrics.py  prometheus.yaml  pyproject.toml  requirements.txt  run.sh  test.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yaml  labeler.yaml
.github/workflows/: deploy.yaml  label.yaml  lint.yaml  semantic.yaml
app/: __init__.py  app.py  auth.py  database.py  db.py  db_init.py  main.py  models.py  routes.py  schemas.py  setup_db.py
app/customer/: dummy_data.py  endpoints.py  main.py
app/government/: main.py  models.py
app/routes/: __init__.py  base.py  schemes.py  transactions.py  users.py  vendors.py
app/seeds/: __init__.py  data.py  run_seed.py  seed.py
app/user/: main.py  models.py
data/: govt_schemes.txt
db/: __init__.py  redis_config.py  redis_operations.py
docker/: prod.Dockerfile  prometheus.Dockerfile
middleware/: __init__.py  middleware.py
models/: __init__.py  api.py  citizen.py  government.py  scheme.py  transaction.py  vendor.py
monitoring/: metrics.py  prometheus.yaml  prometheus.yml
monitoring/grafana/: api_dashboard.json
monitoring/prometheus/: alerts.yaml  config.yaml
routes/: auth.py  chat.py  citizen.py  government.py  vendor.py
scripts/: healthcheck.sh  run.sh  seed_data.sh
templates/: 404.html  index.html
tests/: conftest.py  test_auth.py  test_citizen.py  test_government.py  test_vendor.py
utils/: common.py  db_helpers.py  db_ops.py
