[project]
name = "payzee"
version = "1.0.0"
description = "Pay Easy, Payzee"
authors = [
    {name = "Areeb Ahmed", email = "hi@areeb.dev"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.2",
    "pydantic[email]>=2.5.2",
    "python-multipart>=0.0.6"
]

[tool.poetry]
packages = [
    { include = "app" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
