[project]
name = "payzee"
version = "1.0.0"
description = "Pay Easy, Payzee!"
authors = [
    {name = "Areeb Ahmed", email = "hi@areeb.dev"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "redis (>=6.0.0,<7.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "qrcode (>=8.2,<9.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
